--- a/welcome.html
+++ b/welcome.html
@@ -27,7 +27,7 @@
     }
 
     .page3{
-      background: url(img/page3.jpg);
+      background: url(img/page03_contentMain.png);
       background-size: 100% 100%;
 
     }
@@ -46,7 +46,7 @@
 
 
         <div class="section page2">
-            <p id="intro-1" class="intro-1"> 
+            <!-- <p id="intro-1" class="intro-1"> 
                 让自己的写的应用在自己和朋友的手机上跑起来，为自己的生活提供乐趣和方便。我们最讨厌过时的而且有错误的教科书上的所谓编程实验，我们喜欢尝试最新的SDK特性，开发炫酷的App应用，在App市场上淘金。
             </p>
             <p id="intro-2" class="intro-1">
@@ -54,12 +54,17 @@
             </p>
             <p id="intro-3" class="intro-1">
                 我们不喜欢各种主席、部长的称号，也不喜欢繁杂无意义的例会，更讨厌刷存在感的活动。我们喜欢构建一个有爱的小团队，轻松的氛围，让大家共同成长。我们会定期举行黑客马拉松，技术交流，头脑风暴，户外活动。
-            </p>
+            </p> -->
+            <img src="img/mmclubTitle.png" class="titleImg">
+            <img src="img/page02_decoration.png" class="decorationImg">
+            
+            <img src="img/page_02_content.png" class="contentImg">
+            
         </div>
 
 
         <div class="section page3">
-            <p id="intro-4" class="intro-2"> 
+            <!-- <p id="intro-4" class="intro-2"> 
                 让自己的写的应用在自己和朋友的手机上跑起来，为自己的生活提供乐趣和方便。我们最讨厌过时的而且有错误的教科书上的所谓编程实验，我们喜欢尝试最新的SDK特性，开发炫酷的App应用，在App市场上淘金。
             </p>
             <p id="intro-5" class="intro-2">
@@ -67,7 +72,7 @@
             </p>
             <p id="intro-6" class="intro-2">
                 我们不喜欢各种主席、部长的称号，也不喜欢繁杂无意义的例会，更讨厌刷存在感的活动。我们喜欢构建一个有爱的小团队，轻松的氛围，让大家共同成长。我们会定期举行黑客马拉松，技术交流，头脑风暴，户外活动。
-            </p>
+            </p> -->
         </div>
 
 
