page2 page3 done page4 error

--- a/welcome.html
+++ b/welcome.html
@@ -27,7 +27,7 @@
     }
 
     .page3{
-      background: url(img/page03_contentMain.png);
+      background: url(img/page3.jpg);
       background-size: 100% 100%;
 
     }
@@ -57,9 +57,18 @@
             </p> -->
             <img src="img/mmclubTitle.png" class="titleImg">
             <img src="img/page02_decoration.png" class="decorationImg">
-            
-            <img src="img/page_02_content.png" class="contentImg">
-            
+            <p id="softPink" class="text">“软”得不行</p>
+            <p class="text" id="intro1">
+            	玩技术<br>
+            	钻设计<br>
+            	做得了app<br>
+            	写得好网页<br>
+            	开得了脑洞<br>
+            </p>
+            <p class="text" id="intro2">
+            	这里可能是你<br>
+            	第一个互联网产品的起点
+            </p>
         </div>
 
 
@@ -73,6 +82,39 @@
             <p id="intro-6" class="intro-2">
                 我们不喜欢各种主席、部长的称号，也不喜欢繁杂无意义的例会，更讨厌刷存在感的活动。我们喜欢构建一个有爱的小团队，轻松的氛围，让大家共同成长。我们会定期举行黑客马拉松，技术交流，头脑风暴，户外活动。
             </p> -->
+            <img src="img/page03_CONTENT01.png" class="page3Title">
+            <p class="text" id="intro3">
+            	我们一直努力<br>
+            	去创造更多的可能
+            </p>
+            <p class="text" id="intro4">
+            	不仅是技术的分享与交流<br>
+            	我们同样在努力营造一个<br>
+            	mm人更加轻松<br>
+            	自由的交流环境
+            </p>
+            <p class="text" id="intro5">
+            	现在，<br>
+            	我们已经为<br>
+            	这个轻松愉悦的环境<br>
+            	提供了一些可能，<br>
+            	而未来，<br>
+            	他们将会有你们来决定。
+            </p>
+            <p class="text" id="intro6">
+            	我们的活动据点还有更多的<br>
+            	惊喜等待你们来发现<br>
+            	即日起，mm的活动室<br>
+            	随时欢迎对移动互联网<br>
+            	有着浓厚兴趣的同学前来交流
+            </p>
+            <p class="text" id="intro7">
+            	location:<br>
+            	&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp大学生活动中心<br>
+            	&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp一楼左转第二间<br>
+            	我们的新生交流群:<br>
+            	&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp274150676
+            </p>
         </div>
 
 
