--- a/welcome.html
+++ b/welcome.html
@@ -29,7 +29,11 @@
     .page3{
       background: url(img/page3.jpg);
       background-size: 100% 100%;
+    }
 
+    .page4{
+    	background: url(img/page4.png);
+    	background-size: 100% 100%;
     }
     </style>
 </head>
@@ -57,7 +61,7 @@
             </p> -->
             <img src="img/mmclubTitle.png" class="titleImg">
             <img src="img/page02_decoration.png" class="decorationImg">
-            <p id="softPink" class="text">“软”得不行</p>
+            <p id="softPink" class="text">“软” 得不行</p>
             <p class="text" id="intro1">
             	玩技术<br>
             	钻设计<br>
@@ -119,6 +123,47 @@
 
 
         <div class="section page4">
+            <p class="text" id="intro8">
+            	我们需要你
+            </p>
+            <p class="text" id="intro9">
+            	我们不限专业与学院<br>
+            	面向全校同学<br>
+            	寻找我们的新伙伴
+            </p>
+            <p class="text" id="intro10">
+            	如果你手机界面的设计<br>
+            	有着自己的独特想法或追求
+            </p>
+            <p class="text" id="intro11">
+            	如果你对程序技术研究<br>
+            	有兴趣
+            </p>
+            <p class="text" id="intro12">
+            	如果你对活动策划<br>
+            	与管理有热情
+            </p>
+            <p class="text" id="intro13">
+            	如果你对校外的移动互联网<br>
+            	的各项活动有好奇
+            </p>
+            <!-- <p class="text" id="intro14">
+            	如果这些你都还不能确定<br>
+            	那么,只要你能确定会<br>
+            	对移动互联网有着<br>
+            	耐心能够支撑着<br>
+            	自己<br>
+            	不断探索.......
+            </p> -->
+            <p class="text" id="intro15">
+            	那你就是我们所要找的人.
+            </p>
+            <p class="text" id="intro16">
+            	招新分组:<br>
+            	&nbsp&nbsp&nbsp&nbsp程序组<br>
+            	&nbsp&nbsp&nbsp&nbsp界面设计(UI/UX)<br>
+            	&nbsp&nbsp&nbsp&nbsp活动管理
+            </p>
             
         </div>
     </div> 
@@ -163,7 +208,7 @@
                 //Navigation
                 menu: false,
                 lockAnchors: false,
-                anchors:['firstPage', 'secondPage','hello'],
+                anchors:['firstPage', 'secondPage','thirdPage', 'forthPage'],
                 navigation: false,
                 navigationPosition: 'right',
                 navigationTooltips: ['firstSlide', 'secondSlide'],
