--- a/welcome.html
+++ b/welcome.html
@@ -92,7 +92,8 @@
 </body>
 
 <script type="text/javascript">
-    var loader = new resLoader({
+document.documentElement.style.height = window.innerHeight + 'px';
+var loader = new resLoader({
          resources : [
               'img/page1.png',
               'img/index_BG_change.jpg',
