--- a/welcome.html
+++ b/welcome.html
@@ -123,6 +123,7 @@
 
 
         <div class="section page4">
+        	<div class="contentDiv">
             <p class="text" id="intro8">
             	我们需要你
             </p>
@@ -164,7 +165,8 @@
             	&nbsp&nbsp&nbsp&nbsp界面设计(UI/UX)<br>
             	&nbsp&nbsp&nbsp&nbsp活动管理
             </p>
-            
+            </div>
+            <a href="join.html">加入我们</a>
         </div>
     </div> 
 
